--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -12,31 +12,31 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
+    <%= f.label :Nombre %><br>
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :examMark %><br>
+    <%= f.label "Exámen de admisión" %><br>
     <%= f.text_field :examMark %>
   </div>
   <div class="field">
-    <%= f.label :schoolAverage %><br>
+    <%= f.label "Promedio de secundaria" %><br>
     <%= f.text_field :schoolAverage %>
   </div>
   <div class="field">
-    <%= f.label :isRecommended %><br>
+    <%= f.label :Recomendado %><br>
     <%= f.check_box :isRecommended %>
   </div>
   <div class="field">
-    <%= f.label :isForeign %><br>
+    <%= f.label :Foraneo %><br>
     <%= f.check_box :isForeign %>
   </div>
   <div class="field">
-    <%= f.label :speciality %><br>
+    <%= f.label :Especialidad %><br>
     <%= f.number_field :speciality %>
   </div>
   <div class="field">
-    <%= f.label :secondSpeciality %><br>
+    <%= f.label "Escpecialidad secundaria" %><br>
     <%= f.number_field :secondSpeciality %>
   </div>
   <div class="actions">
