--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -14,6 +14,10 @@
           <h3>Importar</h3>
         </span>
         <%= render 'importAction' %>
+        <a href="requests/new" class="button baseBox">
+          <span class="icon-plus"></span>
+          <h3>Nuevo</h3>
+        </a>
       </div>
     </aside>
     <section class="content">
