--- a/app/views/public/admisions.html.erb
+++ b/app/views/public/admisions.html.erb
@@ -26,5 +26,49 @@
         </div>
       </div>
     </section>
+    <section class="content">
+      <div>
+        <div class="subtitle baseBox">
+          <span class="icon-profile"></span>
+          <div>
+            <h2>Programacion</h2>
+            <p>K miras prro</p>
+          </div>
+        </div>
+        <div class="info">
+          <table>
+            <thead>
+              <tr>
+                <th>ID</th>
+                <th>Nombre</th>
+                <th>Promedio Secundaria</th>
+                <th>Examen de admisión</th>
+                <th>Recomendado</th>
+                <th>Foráneo</th>
+                <th>Especialidad</th>
+                <th>Especialidad Secundaria</th>
+                <th colspan="3"></th>
+              </tr>
+            </thead>
+
+            <tbody>
+              <% @requests.each do |@admision| %>
+                <tr>
+                  <td><%= request.id %></td>
+                  <td><%= request.name %></td>
+                  <td><%= request.schoolAverage %></td>
+                  <td><%= request.examMark %></td>
+                  <td><%= request.isRecommended %></td>
+                  <td><%= request.isForeign %></td>
+                  <td><%= request.speciality %></td>
+                  <td><%= request.secondSpeciality %></td>
+                  <td><%= link_to 'Destroy', group, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </section>
   </div>
 </div>
