--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -8,6 +8,15 @@
           <h2>Acciones</h2>
         </div>
       </div>
+      <div class="actions">
+        <!--
+        <%= form_for(@baseGroup) do |f| %>
+        <div class="baseBox button">
+            <%= f.submit "Generar grupos"%>
+        </div>
+        <% end %>
+        !-->
+      </div>
     </aside>
     <section class="content">
       <div>
