Se agregaron textos a index y a desarrolladores, ademas se quito el no se que chingados poner :/

--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -10,8 +10,7 @@
       </div>
       <div class="info">
         <p>
-          <br>En esta sección suele haber distintas funciones pero no todos los apartados cuentan con ellas.<br><br>
-          Este apartado no cuento con acciones.
+          <br>Este apartado no cuento con acciones por el momento pero seran agregadas en futuras actualizaciónes.<br><br>
         </p>
       </div>
     </aside>
@@ -21,11 +20,11 @@
           <span class="icon-home baseBox"></span>
           <div>
             <h2>Bienvenido!</h2>
-            <p>Estás en el sitio web de admisiones de alumnos de nuevo ingreso del CBTis226.   </p>
+            <p>Estás en el sitio web (beta) de admisiones de alumnos de nuevo ingreso del CBTis226.   </p>
           </div>
         </div>
         <div class="info">
-          <p>La neta no se me ocurre que chingados poner :/</p>
+          <p>Esta zona sera utilizada en futuras verciones del sistema </p>
         </div>
       </div>
     </section>
