Revert "Se agregaron textos a index y a desarrolladores, ademas se quito el no se que chingados poner :/"
This reverts commit d92fa3d092835a18feb6c83b33197c05341c3039.

--- a/app/views/public/developers.html.erb
+++ b/app/views/public/developers.html.erb
@@ -15,24 +15,11 @@
           <span class="icon-terminal baseBox"></span>
           <div>
             <h2>Desarrolladores</h2>
-            <p>
-              Estamos orgullosos de reconocer que los desarrolladores de Esta aplicacíon  web son Alumnos
-              del centro de bachiller tecnológico industrial y de servicios numero 226, Los cuales con el conocimiento adquirido
-              en la institución desarrollamos una aplicacíon web para poder ayudar a hacer que la elección de los nuevos integrantes
-              de esta institución sea mas agil, organizada y transparente.
-            </p>
-            <ul>
-              <li>Alfonso Valencia Sandoval</li>
-              <li>Guillermo Espinosa Elizondo</li>
-              <li>Josue Enrique Luna Palafox</li>
-              <li>Lizbeth Barragan Murgia </li>
-              <li>Elizabeth Cedeño Navarro</li>
-              <li>Reyes Ivan Rodrigues</li>
-              <li>Sergio Antonio Becerra Cobián</li>
-            </ul>
+            <p>¿Son de un CBTis?</p>
           </div>
         </div>
         <div class="info">
+          <p></p>
         </div>
       </div>
     </section>
