Se modificaron los textos agregados en el index y en desarolladores, ademas se agrego la licencia creative commons

--- a/app/views/public/developers.html.erb
+++ b/app/views/public/developers.html.erb
@@ -15,7 +15,19 @@
           <span class="icon-terminal baseBox"></span>
           <div>
             <h2>Desarrolladores</h2>
-            <p>¿Son de un CBTis?</p>
+            <p>Estamos muy orgullosos de presentar nuestra primera aplicación web, completamnte desarrollada por estudiantes del
+            cbtis 226  en la especialidad de programación, los cuales con mucha dedicación y esfuerzo hemos conseguido sacar adelante
+          este proyecto. pero no nos quedaremos con eso, seguiremos avanzando para poder ofrecer productos de calidad e innovadores</p>
+        <ul>
+          <li>Alfonso Valencia Sandoval</li>
+          <li>Guillermo Espinoza Elizondo</li>
+          <li>Josué Erique Luna Palafox</li>
+          <li>Reyes Ivan Rodrigues Hernandes</li>
+          <li>Elizabeh Cedeño Navarro</li>
+          <li>Lisbeth Barrgan Murgia</li>
+          <li>Sergio Antonio Becerra Cobián</li>
+
+        </ul>
           </div>
         </div>
         <div class="info">
