--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -10,8 +10,7 @@
       </div>
       <div class="info">
         <p>
-          <br>En esta sección suele haber distintas funciones pero no todos los apartados cuentan con ellas.<br><br>
-          Este apartado no cuento con acciones.
+          <br>En esta seccion se encontraran distinstas funciones que estaran disponibles en futuras actualizaciones<br><br>
         </p>
       </div>
     </aside>
@@ -21,12 +20,16 @@
           <span class="icon-home baseBox"></span>
           <div>
             <h2>Bienvenido!</h2>
-            <p>Estás en el sitio web de admisiones de alumnos de nuevo ingreso del CBTis226.   </p>
+            <p>Estás en el sitio web de admisiones de alumnos de nuevo ingreso del CBTis226(beta).   </p>
           </div>
         </div>
         <div class="info">
-          <p>La neta no se me ocurre que chingados poner :/</p>
+          <p>En esta zona se encontrara información relevante para la vista publica cuando esta sea utilizada</p>
         </div>
+        <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Licencia Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Control de estudiantes</span> por <span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName">Alfonso Valencia Sandoval, Guillermo Espinoza Elizondo,Josué Enrique Luna Palafox,Elizabeth Cedeño Navarro, Lizbeth Barragan Murgia, Reyes Ivan Rodrigues Hernandez,Sergio Antonio Becerra Cobián</span> se distribuye bajo una <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Licencia Creative Commons Atribución-NoComercial-CompartirIgual 4.0 Internacional</a>.
+        <p>
+          beta 0.3
+        </p>
       </div>
     </section>
   </div>
