--- a/app/views/public/_header.html.erb
+++ b/app/views/public/_header.html.erb
@@ -13,6 +13,12 @@
           <%= link_to 'Admisiones', '/admisiones' %>
         </li>
         <li>
+          <%= link_to 'Solicitudes', requests_path %>
+        </li>
+        <li>
+          <%= link_to 'Crear grupos', groups_path %>
+        </li>
+        <li class="excluded">
           <%= link_to 'Desarrolladores', '/desarrolladores' %>
         </li>
       </ul>
@@ -20,6 +26,10 @@
   </div>
   <div class="logIn baseBox">
     <span class="icon-user baseBox"></span>
-    <%=link_to 'Iniciar sesión' %>
+    <% if user_signed_in? %>
+      <%= link_to current_user.email, destroy_user_session_path, method: :delete  %>
+    <% else %>
+      <%= link_to 'Iniciar sesión', '/users/sign_in' %>
+    <% end %>
   </div>
 </header>
