--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,77 +1,81 @@
 <div>
-  <%= render 'header' %>
-  <div class="body">
-    <aside class="sideBar">
-      <div class="subtitle baseBox">
-        <span class="icon-book baseBox"></span>
-        <div>
-          <h2>Acciones</h2>
-        </div>
-      </div>
-      <div class="actions">
-        <span class="button baseBox" id="import">
-          <span class="icon-folder-upload"></span>
-          <h3>Importar</h3>
-        </span>
-        <%= render 'importAction' %>
-        <a href="requests/new" class="button baseBox">
-          <span class="icon-plus"></span>
-          <h3>Nuevo</h3>
-        </a>
-      </div>
-    </aside>
-    <section class="content">
-      <div>
+  <% if user_signed_in? %>
+    <%= render 'header' %>
+    <div class="body">
+      <aside class="sideBar">
         <div class="subtitle baseBox">
-          <span class="icon-address-book baseBox"></span>
+          <span class="icon-book baseBox"></span>
           <div>
-            <h2>Solicitudes actuales</h2>
-            <p>Esta es la lista de alumnos en protocolo de admisión.</p>
+            <h2>Acciones</h2>
           </div>
         </div>
-        <div class="info infoExtra">
-          <p>
-            Número de regisros actuales: <%= Request.all.length %><br>
-            Número de foráneos actuales: <%= Request.where(isForeign: true).length %><br>
-            Número de recomendados actuales: <%= Request.where(isRecommended: true).length %>
-          </p>
+        <div class="actions">
+          <span class="button baseBox" id="import">
+            <span class="icon-folder-upload"></span>
+            <h3>Importar</h3>
+          </span>
+          <%= render 'importAction' %>
+          <a href="requests/new" class="button baseBox">
+            <span class="icon-plus"></span>
+            <h3>Nuevo</h3>
+          </a>
         </div>
-        <div class="info">
-          <table>
-            <thead>
-              <tr>
-                <th>ID</th>
-                <th>Nombre</th>
-                <th>Promedio Secundaria</th>
-                <th>Examen de admisión</th>
-                <th>Recomendado</th>
-                <th>Foráneo</th>
-                <th>Especialidad</th>
-                <th>Especialidad Secundaria</th>
-                <th colspan="3"></th>
-              </tr>
-            </thead>
-
-            <tbody>
-              <% @requests.each do |request| %>
+      </aside>
+      <section class="content">
+        <div>
+          <div class="subtitle baseBox">
+            <span class="icon-address-book baseBox"></span>
+            <div>
+              <h2>Solicitudes actuales</h2>
+              <p>Esta es la lista de alumnos en protocolo de admisión.</p>
+            </div>
+          </div>
+          <div class="info infoExtra">
+            <p>
+              Número de regisros actuales: <%= Request.all.length %><br>
+              Número de foráneos actuales: <%= Request.where(isForeign: true).length %><br>
+              Número de recomendados actuales: <%= Request.where(isRecommended: true).length %>
+            </p>
+          </div>
+          <div class="info">
+            <table>
+              <thead>
                 <tr>
-                  <td><%= request.id %></td>
-                  <td><%= request.name %></td>
-                  <td><%= request.schoolAverage %></td>
-                  <td><%= request.examMark %></td>
-                  <td><%= request.isRecommended %></td>
-                  <td><%= request.isForeign %></td>
-                  <td><%= request.speciality %></td>
-                  <td><%= request.secondSpeciality %></td>
-                  <td><%= link_to 'Show', request %></td>
-                  <td><%= link_to 'Edit', edit_request_path(request) %></td>
-                  <td><%= link_to 'Destroy', request, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                  <th>ID</th>
+                  <th>Nombre</th>
+                  <th>Promedio Secundaria</th>
+                  <th>Examen de admisión</th>
+                  <th>Recomendado</th>
+                  <th>Foráneo</th>
+                  <th>Especialidad</th>
+                  <th>Especialidad Secundaria</th>
+                  <th colspan="3"></th>
                 </tr>
-              <% end %>
-            </tbody>
-          </table>
+              </thead>
+
+              <tbody>
+                <% @requests.each do |request| %>
+                  <tr>
+                    <td><%= request.id %></td>
+                    <td><%= request.name %></td>
+                    <td><%= request.schoolAverage %></td>
+                    <td><%= request.examMark %></td>
+                    <td><%= request.isRecommended %></td>
+                    <td><%= request.isForeign %></td>
+                    <td><%= request.speciality %></td>
+                    <td><%= request.secondSpeciality %></td>
+                    <td><%= link_to 'Show', request %></td>
+                    <td><%= link_to 'Edit', edit_request_path(request) %></td>
+                    <td><%= link_to 'Destroy', request, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                  </tr>
+                <% end %>
+              </tbody>
+            </table>
+          </div>
         </div>
-      </div>
-    </section>
-  </div>
+      </section>
+    </div>
+  <% else %>
+    <%= render 'noSesion' %>
+  <% end %>
 </div>
