--- a/app/views/groups/generate.html.erb
+++ b/app/views/groups/generate.html.erb
@@ -1,54 +1,58 @@
 <div>
-  <%= render 'header' %>
-  <div class="body">
-    <aside class="sideBar">
-      <div class="subtitle baseBox">
-        <span class="icon-book baseBox"></span>
-        <div>
-          <h2>Acciones</h2>
-        </div>
-      </div>
-      <div class="actions">
-        <a href="/admisiones" class="button baseBox">
-          <span class="icon-plus"></span>
-          <h3>Terminar</h3>
-        </a>
-      </div>
-    </aside>
-    <section class="content">
-      <div>
+  <% if user_signed_in? %>
+    <%= render 'header' %>
+    <div class="body">
+      <aside class="sideBar">
         <div class="subtitle baseBox">
-          <span class="icon baseBox"></span>
+          <span class="icon-book baseBox"></span>
           <div>
-            <h2>Grupos de programación</h2>
-            <p>Alumnos: <%= Group.all.length %></p>
+            <h2>Acciones</h2>
           </div>
         </div>
-        <div class="info">
-          <table>
-            <thead>
-              <tr>
-                <th>Nombre</th>
-                <th>Especialidad</th>
-                <th>Turno</th>
-                <th>Grupo</th>
-                <th colspan="3"></th>
-              </tr>
-            </thead>
-
-            <tbody>
-              <% @groups.each do |group| %>
-                <tr>
-                  <td><%= group.name %></td>
-                  <td><%= group.finalSpeciality %></td>
-                  <td><%= group.turn %></td>
-                  <td><%= group.group %></td>
-                </tr>
-              <% end %>
-            </tbody>
-          </table>
+        <div class="actions">
+          <a href="/admisiones" class="button baseBox">
+            <span class="icon-plus"></span>
+            <h3>Terminar</h3>
+          </a>
         </div>
-      </div>
-    </section>
-  </div>
+      </aside>
+      <section class="content">
+        <div>
+          <div class="subtitle baseBox">
+            <span class="icon baseBox"></span>
+            <div>
+              <h2>Grupos de programación</h2>
+              <p>Alumnos: <%= Group.all.length %></p>
+            </div>
+          </div>
+          <div class="info">
+            <table>
+              <thead>
+                <tr>
+                  <th>Nombre</th>
+                  <th>Especialidad</th>
+                  <th>Turno</th>
+                  <th>Grupo</th>
+                  <th colspan="3"></th>
+                </tr>
+              </thead>
+
+              <tbody>
+                <% @groups.each do |group| %>
+                  <tr>
+                    <td><%= group.name %></td>
+                    <td><%= group.finalSpeciality %></td>
+                    <td><%= group.turn %></td>
+                    <td><%= group.group %></td>
+                  </tr>
+                <% end %>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </section>
+    </div>
+    <% else %>
+     <%= render 'noSesion' %>
+    <% end %>
 </div>
