--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New Request</h1>
+<% if user_signed_in? %>
+  <h1>New Request</h1>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Back', requests_path %>
+  <%= link_to 'Back', requests_path %>
+<% else %>
+  <%= render 'noSesion' %>
+<% end %>
