se cambiaron los textos de la pagina index, desarrolladores, request y de sesion no iniciada, ademas se agrego la licencia en la pagina principal

--- a/app/views/groups/_noSesion.html.erb
+++ b/app/views/groups/_noSesion.html.erb
@@ -11,7 +11,7 @@
       <div class="actions">
         <a href="/" class="button baseBox" id="import">
           <span class="icon-home"></span>
-          <h3>Ushcale!</h3>
+          <h3>Volver al inicio</h3>
         </a>
       </div>
     </aside>
@@ -21,11 +21,11 @@
           <span class="icon-neutral baseBox"></span>
           <div>
             <h2>Sesión no permitida</h2>
-            <p>Lo sentimos, no puedes ingresar aquí</p>
+            <p>Lo sentimos, no puedes ingresar aquí sin una sesión con permisos administrativos</p>
           </div>
         </div>
         <div class="info">
-          <p>Esta sección es solo para administradores, si ya eres un administrador solo inicia sesión.<br></p>
+          <p>Por favor inicia sesion para poder continuar<br></p>
         </div>
       </div>
     </section>
