--- a/app/views/public/admisions.html.erb
+++ b/app/views/public/admisions.html.erb
@@ -32,8 +32,9 @@
         </div>
         <div class="info">
           <p>
-            Los alumnos que hiceron protocolo para ingresar a la institución fueron admitidos bajo el funcionamiento de un programa, el cual revisa que los
-            estudiantes que solicitaron entrar a la institución cumplan con ciertos parámetros predefinidos dentro del código del software.
+            Los alumnos que hiceron proceso para ingresar a la institución fueron admitidos bajo el funcionamiento de esta aplicación,
+            la cual mediante algoritmos y un proceso definido organiza a los alumnos para el ingreso a esta institución.
+
           </p>
         </div>
       </div>
