--- a/app/views/public/developers.html.erb
+++ b/app/views/public/developers.html.erb
@@ -19,7 +19,7 @@
           <span class="icon-terminal baseBox"></span>
           <div>
             <h2>Desarrolladores</h2>
-            <p>¿Son de un CBTis?</p>
+            <p>¿Quienes Somos?</p>
           </div>
         </div>
         <div class="info">
@@ -27,6 +27,16 @@
             Estamos muy orgullosos de presentar nuestra primera aplicación web, completamnte desarrollada por estudiantes del
             cbtis 226  en la especialidad de programación, los cuales con mucha dedicación y esfuerzo hemos conseguido sacar adelante
             este proyecto. pero no nos quedaremos con eso, seguiremos avanzando para poder ofrecer productos de calidad e innovadores
+            <p><b>TeamOp</b></p>
+            <ul>
+              <li>-Alfonso Valencia Sandoval-</li>
+              <li>-Guillemo Espinoza Elizondo-</li>
+              <li>-Reyes Ivan Rodrigues Hérnandez-</li>
+              <li>-Elizabeth Cedeño Navarro-</li>
+              <li>-Lizbeth Barragan Murgia-</li>
+              <li>-Josué Enrique Luna Palafox-</li>
+              <li>-Sergio Antonio Becerra Cobián-</li>
+            </ul>
           </p>
         </div>
       </div>
