--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -14,8 +14,7 @@
       </div>
       <div class="info">
         <p>
-          <br>En esta zona suele haber acciones a lo largo de la aplicación web que realizan distintas tareas. Esta solo es una página de bienvenida así que
-          no cuenta con acciones.<br><br>Este apartado no cuenta con acciones.
+          <br> En esta parte podras encontrar diferentes funciones que podras realizar cuando navegues por la aplicación.<br><br
         </p>
       </div>
     </aside>
@@ -25,11 +24,11 @@
           <span class="icon-home baseBox"></span>
           <div>
             <h2>¡Bienvenido!</h2>
-            <p>Estás en el sitio web de admisiones de alumnos de nuevo ingreso del CBTis226.</p>
+            <p>Estás en el sitio web de admisiones de alumnos de nuevo ingreso del CBTis226 (Beta 1.0).</p>
           </div>
         </div>
         <div class="info">
-          <p>Hola</p>
+          <p><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Licencia Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Control De Alumnos</span> por <span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName">"TeamOp"(vease Pagina de desarroladores)</span> se distribuye bajo una <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Licencia Creative Commons Atribución-NoComercial-CompartirIgual 4.0 Internacional</a>.</p>
         </div>
         <!--
         <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Licencia Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Control de estudiantes</span> por <span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName">Alfonso Valencia Sandoval, Guillermo Espinoza Elizondo,Josué Enrique Luna Palafox,Elizabeth Cedeño Navarro, Lizbeth Barragan Murgia, Reyes Ivan Rodrigues Hernandez,Sergio Antonio Becerra Cobián</span> se distribuye bajo una <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Licencia Creative Commons Atribución-NoComercial-CompartirIgual 4.0 Internacional</a>.
