se agrego la seccion de contacto y se acomodaron detalles menores en textos

--- a/app/views/public/developers.html.erb
+++ b/app/views/public/developers.html.erb
@@ -39,6 +39,13 @@
             </ul>
           </p>
         </div>
+          <div class="subtitle baseBox">
+            <h2>Contacto</h2>
+              <div class="info">
+                <p>¿Necesitas soporte? puedes ponerte en contacto por medio del correo soporteteamop@gmail.com, o por medio de los
+                telefonos 341-102-6972 o 33-206-6774 </p>
+              </div>
+          </div>
       </div>
     </section>
   </div>
